# Younger-Logics-IR

./: README.md  pyproject.toml
.github/: dependabot.yml
tests/: test_count_model_infos.py  test_dist_model_infos.py  test_load_instances.py  test_merge_instances.py  test_merge_status.py  test_onnx2instance.py  test_onnx2logicx.py  test_optimum2instance.py
third_parties/: README.md
third_parties/DeepNets/: convert.py  generate_model_infos.py
third_parties/NASB/DeepNets/: README.md  convert.py  generate_model_infos.py
third_parties/NASB/DeepNets-1M/: README.md  convert.py
third_parties/NASB/NAS-Bench-101/: README.md  chunking.py  convert-paper.py  convert.py  setup.py
third_parties/NASB/NAS-Bench-201/: README.md
third_parties/NASB/NATS-Bench/: README.md  convert.py
third_parties/nasbench_keras/: README.md  convert2dag.py
third_parties/nasbench_keras/nasbench_keras/: model_spec.py
third_parties/transformers.js/: README.ZH.md
third_parties/transformers.js/convert/: supported_models.py
younger_logics_ir/: __init__.py
younger_logics_ir/commands/: __init__.py  assort.py  construct.py  create.py  logics.py  main.py  output.py  update.py
younger_logics_ir/commons/: __init__.py  cache.py  constants.py  deletelater.py  json.py  later.py
younger_logics_ir/constructors/: __init__.py  utils.py
younger_logics_ir/constructors/huggingface/: annotations.py
younger_logics_ir/constructors/huggingface/scripts/transformers.js/: convert.sh
younger_logics_ir/constructors/huggingface/scripts/transformers.js/convert/: main.py
younger_logics_ir/converters/: __init__.py
younger_logics_ir/converters/core2ir/: __init__.py
younger_logics_ir/converters/onnx2ir/: __init__.py  io.py  translation.py
younger_logics_ir/dataset/: __init__.py  utils.py
younger_logics_ir/modules/: __init__.py  dataset.py  instance.py  label.py  logicx.py  meta.py  network.py  stamp.py
younger_logics_ir/scripts/: __init__.py
younger_logics_ir/scripts/bootstrap/: __init__.py  clean.py  filter.py  semantics.py  statistics.py
younger_logics_ir/scripts/commons/: __init__.py  huggingface_annos.py  huggingface_miscs.py  huggingface_utils.py  onnx_utils.py  torchvision_annos.py  utils.py
younger_logics_ir/scripts/commons/detectors/: __init__.py  datasets.py  langs.py  metrics.py  tasks.py
younger_logics_ir/scripts/commons/third_parties/: README.md
younger_logics_ir/scripts/create/: __init__.py
younger_logics_ir/scripts/create/huggingface/: __init__.py  convert.py  retrieve.py
younger_logics_ir/scripts/create/onnx/: convert.py  retrieve.py
younger_logics_ir/scripts/create/torchvision/: __init__.py
younger_logics_ir/scripts/hubs/huggingface/: annos.py  convert.py  miscs.py  retrieve.py  utils.py
younger_logics_ir/scripts/hubs/onnx/: __init__.py  convert.py  retrieve.py  utils.py
younger_logics_ir/scripts/hubs/torch/: annos.py  convert.py  retrieve.py  utils.py
younger_logics_ir/scripts/tools/: __init__.py  semantics.py  statistics.py  visualize.py
younger_logics_ir/scripts/update/: __init__.py
younger_logics_ir/utils/: __init__.py  cache.py  io.py  translation.py
younger_logics_ir/utils/convertors/: __init__.py  tensorflow2onnx.py
younger_logics_ir/utils/detectors/: __init__.py  datasets.py  langs.py
